app/assets/stylesheets/questions.scss
// Place all the styles related to the Questions controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

main {
  padding: 0 25px;
}

.whole-question {
  display: flex;
  width: 100%;
  margin: 0 auto;
  border-top: 1px solid #e3e5e7;
  padding: 5px 0 5px 0;
}

.vote-container {
  width: 100px;
  font-size: 18px;
  text-align: center;
  line-height: .85;
}

.vote, .vote:focus, .vote:hover, .vote:active {
  color: blue;
  text-decoration:none;
}

.like-btn, .like-btn:focus, .like-btn:hover, .like-btn:active {
  color: blue;
  text-decoration:none;
}

.dislike-btn, .dislike-btn:focus, .dislike-btn:hover, .dislike-btn:active {
  color: blue;
  text-decoration:none;
}

.liked, .liked:focus, .liked:hover, .liked:active {
  color: orange;
  text-decoration: none;
}

.question-details {
  flex: 1;
}

.question-title {
  font-size: 16px;
}

.question-user {
  font-size: 13px;
}

.answer-text {
  margin-left: 20px;
}

.question-email {
  font-style: italic;
}

.not-logged-in {
  cursor: pointer;
}

.comment-box {
  padding-left: 15px;
}

.comment-box .comment-box .comment-box .comment-box .comment-box .comment-box {
  padding-left: 0;
}

.comments-container {
  max-width: 750px;
}

.page-container {
  margin: 20px 100px;
}

.question-container {
  border-bottom: 1px solid #e3e5e7;
}

.answer-container {
  border-bottom: 1px solid #e3e5e7;
  padding-top: 10px;
  padding-bottom: 10px;
}

.solo-comment {
  border-bottom: 1px solid #e3e5e7;
  padding: 5px 0;
}

.video-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}

.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.url-input {
  width: 400px;
}

.flash-style {
  display: inline-block;
  border: 1px solid black;
  background: #EEF0F1;
  padding: 25px 150px;
}

.flash-container {
  text-align: center;
  margin-bottom: 20px;
}


/*Media Queries*/

@media only screen and (max-width: 500px) {
  .vote-container {
    width: 50px;
    margin: auto;
  }
}

@media only screen and (max-width: 800px) {
  .page-container {
    margin-left: 20px;
    margin-right: 20px;
  }
}

